# ska-sdp-opinterface

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  .release  CHANGELOG.md  CODEOWNERS  CONTRIBUTORS  Dockerfile  LICENCE  Makefile  README.md  gunicorn_starter.sh  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py  skart.toml
docs/src/: conf.py  connecting.rst  index.rst  list-view.rst  scripts-view.rst  tree-view.rst  wf-view.rst
make/: docker.mk  help.mk  release.mk
src/: .flaskenv
src/ska_sdp_opinterface/: model.py  sdp.py  version.py
src/ska_sdp_opinterface/static/: base.css
src/ska_sdp_opinterface/templates/: base.html  db_create.html  db_list.html  db_tree.html  tree.html
tests/: conftest.py  constants.py  test_app.py  test_model.py
