[tool.poetry]
name = "ska-sdp-opinterface"
version = "0.3.1"
description = "SKA SDP Operator Interface"
authors = ["SKA SDP Developers"]
license = "BSD-3-Clause"
repository = "https://gitlab.com/ska-telescope/sdp/ska-sdp-opinterface"

[[tool.poetry.source]]
name = "ska"
url = "https://artefact.skao.int/repository/pypi-internal/simple"

[tool.poetry.dependencies]
python = ">=3.7.2,<4.0"
flask = "^2.2.2"
gunicorn = "^20.1.0"
ska-sdp-config = "^0.4.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
pylint = "^2.15.2"
pytest-cov = "^3.0.0"
pylint-junit = "^0.3.2"
build = "^0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
