[tool.poetry]
name = "ska-sdp-opinterface"
version = "0.3.2"
description = "SKA SDP Operator Interface"
authors = ["SKA SDP Developers"]
license = "BSD-3-Clause"
repository = "https://gitlab.com/ska-telescope/sdp/ska-sdp-opinterface"

[[tool.poetry.source]]
name = "ska"
url = "https://artefact.skao.int/repository/pypi-internal/simple"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
flask = "^3.0.2"
gunicorn = "^21.2.0"
ska-sdp-config = "^0.5.6"

[tool.poetry.group.dev.dependencies]
build = "^1.0.3"
black = "^24.1.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
pylint = "^3.0.3"
pylint-junit = "^0.3.4"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
